# atlas

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cursor/rules/: architecture.mdc  db_migrations.mdc  development_guide.mdc  http_error_openapi.mdc  modules_authz_events.mdc  prompts_assistant.mdc  rust_style.mdc  telemetry_logging.mdc  testing_ci.mdc  workspace_cli.mdc
.github/workflows/: ci.yml
config/: base.toml  local.toml  production.toml  staging.toml
config/auth/: policy.csv
crates/authz/: Cargo.toml
crates/authz/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: error.rs  lib.rs  router.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  module.rs  registry.rs  settings.rs
crates/modules/demo-auth/: Cargo.toml
crates/modules/demo-auth/src/: lib.rs
crates/modules/demo-books/: Cargo.toml
crates/modules/demo-books/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: development_plan.md  project_overview.md
src/: lib.rs  main.rs
src/modules/: mod.rs
src/modules/books/: mod.rs  models.rs
src/modules/books/migrations/: 0001_init.surql
src/modules/books/routes/: mod.rs
src/modules/users/: mod.rs
src/utils/: mod.rs
