[workspace]
members = [
    ".",
    "crates/authz",
    "crates/cli",
    "crates/db",
    "crates/events",
    "crates/http",
    "crates/kernel",
    "crates/telemetry",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.metadata]
# Reserved for shared configuration keys (e.g., cargo-deny, release).

[workspace.dependencies]
anyhow = "1"
config = "0.14"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
axum = "0.7"
inventory = "0.3"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
utoipa = "4.2"

[package]
name = "atlas-app"
version = "0.1.0"
edition = "2021"
description = "Project-specific application built on ATLAS framework"

[dependencies]
anyhow = { workspace = true }
atlas-kernel = { path = "crates/kernel" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
