[workspace]
members = [
    ".",
    "crates/authz",
    "crates/cli",
    "crates/db",
    "crates/events",
    "crates/http",
    "crates/kernel",
    "crates/telemetry",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.metadata]
# Reserved for shared configuration keys (e.g., cargo-deny, release).

[workspace.dependencies]
anyhow = "1"
config = "0.15"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
axum = "0.8"
inventory = "0.3"
once_cell = "1.21"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "request-id",
    "trace",
    "timeout",
] }
utoipa = "5.4"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1", features = ["v7"] }

[package]
name = "atlas-app"
version = "0.1.0"
edition = "2021"
description = "Project-specific application built on ATLAS framework"

[[bin]]
name = "atlas-app"
path = "src/main.rs"

[lib]
name = "atlas_app"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
atlas-kernel = { path = "crates/kernel" }
atlas-http = { path = "crates/http" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
inventory = { workspace = true }
once_cell = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
