[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line entrypoint for ATLAS"

[dependencies]
atlas-kernel = { path = "../kernel" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
