[package]
name = "atlas-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line entrypoint for ATLAS"

[dependencies]
atlas-kernel = { path = "../kernel" }
atlas-http = { path = "../http" }
atlas-app = { path = "../../" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
