[package]
name = "atlas-http"
version = "0.1.0"
edition = "2021"
description = "HTTP server facade for ATLAS"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
time = "0.3"
atlas-kernel = { path = "../kernel" }
